# CrowdDrone

./: .README  .gitignore  README.md
crowddrone_gazebo/: CMakeLists.txt  package.xml
crowddrone_gazebo/include/: ring_visual_plugin.h
crowddrone_gazebo/launch/: crowddrone_block.launch  crowddrone_ring.launch
crowddrone_gazebo/models/blockade/: model.config  model.sdf
crowddrone_gazebo/models/blockade/meshes/: blockade.dae
crowddrone_gazebo/models/eight/: model.config  model.sdf
crowddrone_gazebo/models/eight/meshes/: eight.dae
crowddrone_gazebo/models/endpoint/: model.config  model.sdf
crowddrone_gazebo/models/endpoint/meshes/: endPoint.dae
crowddrone_gazebo/models/ring/: model.config  model.sdf
crowddrone_gazebo/models/ring/meshes/: ring.dae  ringcol.dae
crowddrone_gazebo/models/room/: model.config  model.sdf
crowddrone_gazebo/models/room/meshes/: room.dae  roomcol.dae
crowddrone_gazebo/models/simpleroom/: model.config  model.sdf
crowddrone_gazebo/models/simpleroom/meshes/: simpleRoom.dae
crowddrone_gazebo/src/: ring_visual_plugin.cpp  ringworld_plugin.cpp
crowddrone_gazebo/worlds/: blockadeworld.world  ringworld.world
crowddrone_input_aggregator/: CMakeLists.txt  package.xml
crowddrone_input_aggregator/scripts/: aggregator_swapper.py  ai_decorator.py  drone_pose_logger.py  input_aggregator_server.py
crowddrone_input_aggregator/scripts/input_aggregator/: aggregator.py  kemeny_aggregator.py  leader_aggregator.py  mob_aggregator.py  realtime_borda_aggregator.py  realtime_kemeny_aggregator.py  realtime_kemeny_full_aggregator.py  realtime_weighted_borda_aggregator.py  realtime_weighted_borda_full_aggregator.py  realtime_weighted_vote_aggregator.py  realtimely_weighted_vote_aggregator.py  single_aggregator.py  vickrey_kappa_aggregator.py  weighted_vote_aggregator.py
crowddrone_input_aggregator/scripts/simulated_input/: drone_controller.py  drone_controller2.py  drone_controller3.py  fake_crowd.py  gazebo_model_stater.py  launch_generator.py  malicious_input.py  optimal_input.py  path_from_rings.py  random_input.py  random_input2.py
crowddrone_input_aggregator/srv/: GetConnectedInfo.srv  GetNewClientTopic.srv
