<?xml version="1.0"?>
<package>
  <name>crowddrone_gazebo</name>
  <version>0.0.0</version>
  <description>The crowddrone_gazebo package contains the necessary files for running a simulation environment for the crowddrone project</description>
  <maintainer email="e.salisbury@ecs.soton.ac.uk">Elliot</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>gazebo_ros</run_depend>	
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_media_path="${prefix}" />
  </export>
</package>
