<?xml version="1.0"?>
<package>
  <name>crowddrone_input_aggregator</name>
  <version>0.0.1</version>
  <description>The crowddrone_input_aggregator package, aggregators multiple users input for flying a single drone</description>
  <maintainer email="e.salisbury@ecs.soton.ac.uk">Elliot</maintainer>
  <license>BSD</license>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>

  </export>
</package>
